# FWUPD

./: README.md  STATUS.md  Task.md
Basics/: Architecture.md  LVFS_Explained.md  What_is_FWUPD.md
Brainstorm/: ChromeOS_Implementation.md  Virtual_Hardware_Testing.md
Deployment/: Enterprise_Deployment.md  LVFS_Upload.md  README.md
Firmware_CAB/: CAB_Creation.md  Metainfo_XML.md  README.md
Linux_Basics/: 01_Windows_vs_Linux.md  02_Command_Line.md  03_File_System.md  04_User_Permission.md  05_Package_Manager.md  06_Service_Daemon.md  07_Startup_Process.md  08_Network_Command.md  09_Development_Tools.md  README.md
Plugin_Development/: Development_Guide.md  M487_Example.md  Plugin_Types.md
doc/I2C_HID_Company_Product/: 00_Overview.md  VERIFICATION.md
doc/I2C_HID_Company_Product/01_Plugin_Development/: Examples.md  (+2 more)
plugin/company-i2c-hid/: README.md  config.h  fu-company-i2c-hid-device.c  fu-company-i2c-hid-device.h  fu-company-i2c-hid-firmware.c  fu-company-i2c-hid-firmware.h  fu-company-i2c-hid-plugin.c  fu-company-i2c-hid-plugin.h  fu-company-i2c-hid.quirk  meson.build
tasks/: STATUS.md  TaskList.md  TaskRules.md  Task_Template.md  Verify_Template.md
tasks/F001/: PLAN.md  Task.md  VERIFY.md  WORKLOG.md
tasks/F002/: Task.md  VERIFY.md  WORKLOG.md
tasks/VirtualDevice/: VERIFY.md
tasks/enhancement/: README.md
virtual-device/: README.md
virtual-device/i2c-stub-config/: setup.sh
virtual-device/tests/: expected-output.txt  test-plugin.sh
virtual-device/vhidi2c-daemon/: Makefile  README.md  hid-i2c-protocol.c  hid-i2c-protocol.h  vhidi2c-daemon.c
(+5 files in other folders)
